--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ class: center, middle, inverse, title-slide
 ## Beyond Microsoft: A Series of YouTube Shorts
 ]
 .author[
-### <img src = '/Users/dpadil10/Downloads/imgs/Subject6.png' width=160px height=140px/><br><img src = '/Users/dpadil10/Downloads/imgs/Subject4.png' alt='Rotated Image' class='rotate-image' width=45px height=50px/>    <img src = '/Users/dpadil10/Downloads/imgs/Subject5.png' width=50px height=50px/>    <img src = '/Users/dpadil10/Downloads/imgs/Subject2.png' alt='Rotated Image' class='rotate-image2' width=50px height=50px/><br><img src = '/Users/dpadil10/Downloads/imgs/Subject1.png' width=50px height=50px/>        <img src = '/Users/dpadil10/Downloads/imgs/Subject3.png' width=50px height=50px/><br>Dylan Padilla | 🔗 <a href="https://dylanpadilla.netlify.app/">https://dylanpadilla.netlify.app/</a><br>ASN Graduate Council | 🔗 <a href="https://asngrads.com/">https://asngrads.com/</a><br><svg viewBox="0 0 512 512" style="position:relative;display:inline-block;top:.1em;fill:gray;height:1em;" xmlns="http://www.w3.org/2000/svg"> <path d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"></path></svg> <a href="mailto:dpadil10@asu.edu" class="email">dpadil10@asu.edu</a>
+### <img src = 'imgs/Subject6.png' width=160px height=140px/><br><img src = 'imgs/Subject4.png' alt='Rotated Image' class='rotate-image' width=45px height=50px/>    <img src = 'imgs/Subject5.png' width=50px height=50px/>    <img src = 'imgs/Subject2.png' alt='Rotated Image' class='rotate-image2' width=50px height=50px/><br><img src = 'imgs/Subject1.png' width=50px height=50px/>        <img src = 'imgs/Subject3.png' width=50px height=50px/><br>Dylan Padilla | 🔗 <a href="https://dylanpadilla.netlify.app/">https://dylanpadilla.netlify.app/</a><br>ASN Graduate Council | 🔗 <a href="https://asngrads.com/">https://asngrads.com/</a><br><svg viewBox="0 0 512 512" style="position:relative;display:inline-block;top:.1em;fill:gray;height:1em;" xmlns="http://www.w3.org/2000/svg"> <path d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"></path></svg> <a href="mailto:dpadil10@asu.edu" class="email">dpadil10@asu.edu</a>
 ]
 
 ---
@@ -30,8 +30,8 @@ class: center, middle, inverse, title-slide
 ## ASN Graduate Council Mixer
 
 &lt;center&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/mixer-albuquerque.png' width = 530 height = 400 /&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/booth.png' width = 490 height = 400 /&gt;
+&lt;img src = 'imgs/mixer-albuquerque.png' width = 530 height = 400 /&gt;
+&lt;img src = 'imgs/booth.png' width = 490 height = 400 /&gt;
 &lt;/center&gt;
 
 The ASN Graduate Council is commited to developing initiatives to provide more valuable services to its student members
@@ -46,7 +46,7 @@ The Graduate Council actively participates in planning and assisting with these 
 
 .pull-left[
 &lt;center&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/demonstration-short-edited.gif' width = 300 height = 520/&gt;
+&lt;img src = 'imgs/demonstration-short-edited.gif' width = 300 height = 520/&gt;
 &lt;/center&gt; 
 ]
 
@@ -68,7 +68,7 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 
 .pull-left[
 &lt;center&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/demonstration-short-edited.gif' width = 300 height = 520/&gt;
+&lt;img src = 'imgs/demonstration-short-edited.gif' width = 300 height = 520/&gt;
 &lt;/center&gt; 
 ]
 
@@ -93,7 +93,7 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 
 .pull-left[
 &lt;center&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/demonstration-short-edited.gif' width = 300 height = 520/&gt;
+&lt;img src = 'imgs/demonstration-short-edited.gif' width = 300 height = 520/&gt;
 &lt;/center&gt; 
 ]
 
@@ -119,13 +119,13 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 
 .pull-left[
 &lt;center&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/demonstration-short-edited.gif' width = 300 height = 520/&gt;
+&lt;img src = 'imgs/demonstration-short-edited.gif' width = 300 height = 520/&gt;
 &lt;/center&gt; 
 ]
 
 .pull-right[
 &lt;center&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/comment-edited.gif' width = 300 height = 520/&gt;
+&lt;img src = 'imgs/comment-edited.gif' width = 300 height = 520/&gt;
 &lt;/center&gt; 
 ]
 
@@ -139,7 +139,7 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 .pull-left[
 &lt;center&gt;
 &lt;br&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/microsoft.png' width = 600 height = 380&gt;
+&lt;img src = 'imgs/microsoft.png' width = 600 height = 380&gt;
 &lt;/center&gt;
 
 ]
@@ -153,7 +153,7 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 .pull-left[
 &lt;center&gt;
 &lt;br&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/microsoft.png' width = 600 height = 380&gt;
+&lt;img src = 'imgs/microsoft.png' width = 600 height = 380&gt;
 &lt;/center&gt;
 
 ]
@@ -162,7 +162,7 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 
 &lt;center&gt;
 &lt;br&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/stallman.jpg' width = 600 height = 380&gt;
+&lt;img src = 'imgs/stallman.jpg' width = 600 height = 380&gt;
 &lt;/center&gt;
 
 Richard Stallman
@@ -175,16 +175,16 @@ Richard Stallman
 
 .pull-left[
 &lt;center&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/tools.png' width = 500 height = 500&gt;
+&lt;img src = 'imgs/tools.png' width = 500 height = 500&gt;
 &lt;/center&gt;
 ]
 
 .pull-right[
 
-&lt;img src = '/Users/dpadil10/Downloads/imgs/html.png' width = 190, height = 200&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/css.png' width = 170, height = 175&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/typst.png' width = 150, height = 150&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/R.png' width = 180, height = 180&gt;
+&lt;img src = 'imgs/html.png' width = 190, height = 200&gt;
+&lt;img src = 'imgs/css.png' width = 170, height = 175&gt;
+&lt;img src = 'imgs/typst.png' width = 150, height = 150&gt;
+&lt;img src = 'imgs/R.png' width = 180, height = 180&gt;
 
 ]
 
@@ -194,9 +194,9 @@ Richard Stallman
 
 
 &lt;center&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/trailer1.gif' width = 300 height = 520/&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/trailer2.gif' width = 300 height = 520/&gt;
-&lt;img src = '/Users/dpadil10/Downloads/imgs/trailer3.gif' width = 300 height = 520/&gt;
+&lt;img src = 'imgs/trailer1.gif' width = 300 height = 520/&gt;
+&lt;img src = 'imgs/trailer2.gif' width = 300 height = 520/&gt;
+&lt;img src = 'imgs/trailer3.gif' width = 300 height = 520/&gt;
 &lt;/center&gt; 
 
 
