--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@ The Graduate Council actively participates in planning and assisting with these 
 
 .pull-right[
 
+- Go to the App Store if you have an IOS device or to the Play Store if you have an Android
+
+- On the search bar, type 'YouTube' and download the App
+
+- Sign in using your email account and you'll be ready to go!
 
 
 ]
@@ -68,7 +73,7 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 
 .pull-left[
 &lt;center&gt;
-&lt;img src = 'imgs/demonstration-short-edited.gif' width = 300 height = 520/&gt;
+&lt;img src = 'imgs/comment-edited.gif' width = 300 height = 520/&gt;
 &lt;/center&gt; 
 ]
 
@@ -93,7 +98,7 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 
 .pull-left[
 &lt;center&gt;
-&lt;img src = 'imgs/demonstration-short-edited.gif' width = 300 height = 520/&gt;
+&lt;img src = 'imgs/comment-edited.gif' width = 300 height = 520/&gt;
 &lt;/center&gt; 
 ]
 
@@ -115,22 +120,21 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 
 ---
 
-## A new way to connect with the public
+## Beyond Microsoft
 
 .pull-left[
 &lt;center&gt;
-&lt;img src = 'imgs/demonstration-short-edited.gif' width = 300 height = 520/&gt;
-&lt;/center&gt; 
+&lt;br&gt;
+&lt;img src = 'imgs/microsoft.png' width = 600 height = 380&gt;
+&lt;/center&gt;
+
 ]
 
 .pull-right[
-&lt;center&gt;
-&lt;img src = 'imgs/comment-edited.gif' width = 300 height = 520/&gt;
-&lt;/center&gt; 
+&lt;img src = 'imgs/typst_inset.png' width = 170 height = 220&gt;
 ]
 
-???
-The idea is to provide a new way for the ASN Graduate Council to connect with all scientists using just a smartphone, tablet, or laptop through the YouTube app.
+Perform academic tasks researchers carry out on a daily basis
 
 ---
 
@@ -144,11 +148,16 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 
 ]
 
+.pull-right[
+&lt;img src = 'imgs/typst_inset.png' width = 170 height = 220&gt;
+&lt;img src = 'imgs/poster_photo.png' width = 170 height = 220&gt;
+]
+
+Perform academic tasks researchers carry out on a daily basis
 
 ---
 
-
-## Have freedom in your computing
+## Beyond Microsoft
 
 .pull-left[
 &lt;center&gt;
@@ -159,15 +168,12 @@ The idea is to provide a new way for the ASN Graduate Council to connect with al
 ]
 
 .pull-right[
-
-&lt;center&gt;
-&lt;br&gt;
-&lt;img src = 'imgs/stallman.jpg' width = 600 height = 380&gt;
-&lt;/center&gt;
-
-Richard Stallman
-
+&lt;img src = 'imgs/typst_inset.png' width = 170 height = 220&gt;
+&lt;img src = 'imgs/poster_photo.png' width = 170 height = 220&gt;
+&lt;img src = 'imgs/ezgif.com-video-to-gif-converter.gif' width = 140 height = 220&gt;
 ]
+
+Perform academic tasks researchers carry out on a daily basis
 
 ---
 
@@ -175,16 +181,121 @@ Richard Stallman
 
 .pull-left[
 &lt;center&gt;
+&lt;br&gt;
+&lt;img src = 'imgs/microsoft.png' width = 600 height = 380&gt;
+&lt;/center&gt;
+
+]
+
+.pull-right[
+&lt;img src = 'imgs/typst_inset.png' width = 170 height = 220&gt;
+&lt;img src = 'imgs/poster_photo.png' width = 170 height = 220&gt;
+&lt;img src = 'imgs/ezgif.com-video-to-gif-converter.gif' width = 140 height = 220&gt;
+&lt;img src = 'imgs/ezgif.com-crop.gif' width = 250 height = 150&gt;
+]
+
+Perform academic tasks researchers carry out on a daily basis
+
+---
+
+## Beyond Microsoft
+
+.pull-left[
+&lt;center&gt;
+&lt;br&gt;
 &lt;img src = 'imgs/tools.png' width = 500 height = 500&gt;
 &lt;/center&gt;
+
 ]
 
 .pull-right[
 
+&lt;center&gt;
 &lt;img src = 'imgs/html.png' width = 190, height = 200&gt;
-&lt;img src = 'imgs/css.png' width = 170, height = 175&gt;
-&lt;img src = 'imgs/typst.png' width = 150, height = 150&gt;
-&lt;img src = 'imgs/R.png' width = 180, height = 180&gt;
+&lt;/center&gt; 
+
+
+]
+
+&lt;br&gt;
+
+Perform academic tasks researchers carry out on a daily basis
+
+---
+
+## Beyond Microsoft
+
+.pull-left[
+&lt;center&gt;
+&lt;br&gt;
+&lt;img src = 'imgs/tools.png' width = 500 height = 500&gt;
+&lt;/center&gt;
+
+]
+
+.pull-right[
+
+&lt;center&gt;
+&lt;img src = 'imgs/html.png' width = 190 height = 200&gt;
+&lt;img src = 'imgs/css.png' width = 170 height = 175&gt;
+&lt;/center&gt; 
+
+
+]
+
+&lt;br&gt;
+
+Perform academic tasks researchers carry out on a daily basis
+
+---
+
+## Beyond Microsoft
+
+.pull-left[
+&lt;center&gt;
+&lt;br&gt;
+&lt;img src = 'imgs/tools.png' width = 500 height = 500&gt;
+&lt;/center&gt;
+
+]
+
+.pull-right[
+
+&lt;center&gt;
+&lt;img src = 'imgs/html.png' width = 190 height = 200&gt;
+&lt;img src = 'imgs/css.png' width = 170 height = 175&gt;
+&lt;img src = 'imgs/typst.png' width = 150 height = 150&gt;
+&lt;/center&gt; 
+
+
+]
+
+&lt;br&gt;
+
+Perform academic tasks researchers carry out on a daily basis
+
+---
+
+## Beyond Microsoft
+
+.pull-left[
+&lt;center&gt;
+&lt;br&gt;
+&lt;img src = 'imgs/tools.png' width = 500 height = 500&gt;
+&lt;/center&gt;
+
+]
+
+.pull-right[
+
+&lt;center&gt;
+&lt;img src = 'imgs/html.png' width = 190 height = 200&gt;
+&lt;img src = 'imgs/css.png' width = 170 height = 175&gt;
+&lt;img src = 'imgs/typst.png' width = 150 height = 150&gt;
+&lt;br&gt;&lt;br&gt;&lt;br&gt;
+&lt;img src = 'imgs/R.png' width = 170 height = 150&gt;
+&lt;/center&gt; 
+
 
 ]
 
@@ -202,6 +313,16 @@ Richard Stallman
 
 ---
 
+## Have freedom in your computing
+
+&lt;center&gt;
+&lt;br&gt;
+&lt;img src = 'imgs/stallman.jpg' width = 600 height = 380&gt;
+&lt;/center&gt;
+
+Richard Stallman
+
+---
 
 ## Here is what you should know and do
 
