--- a/index.html
+++ b/index.html
@@ -301,12 +301,108 @@ Perform academic tasks researchers carry out on a daily basis
 
 ---
 
+## Why YouTube?
+
+.pull-left[
+&lt;center&gt;
+&lt;img src = 'imgs/YouTube-page.png' width = 480 height = 520/&gt;
+&lt;/center&gt;
+]
+
+---
+
+## Why YouTube?
+
+.pull-left[
+&lt;center&gt;
+&lt;img src = 'imgs/YouTube-page.png' width = 480 height = 520/&gt;
+&lt;/center&gt;
+]
+
+
+.pull-right[
+
+YouTube Shorts presents user-generated vertical or square videos up to 60 seconds long
+
+]
+
+---
+
+## Why YouTube?
+
+.pull-left[
+&lt;center&gt;
+&lt;img src = 'imgs/YouTube-page.png' width = 480 height = 520/&gt;
+&lt;/center&gt;
+]
+
+
+.pull-right[
+
+YouTube Shorts presents user-generated vertical or square videos up to 60 seconds long
+&lt;br&gt;&lt;br&gt;
+It allows users to add licensed music and on-screen captions
+
+]
+
+---
+
+## Why YouTube?
+
+.pull-left[
+&lt;center&gt;
+&lt;img src = 'imgs/YouTube-page.png' width = 480 height = 520/&gt;
+&lt;/center&gt;
+]
+
+
+.pull-right[
+
+YouTube Shorts presents user-generated vertical or square videos up to 60 seconds long
+&lt;br&gt;&lt;br&gt;
+It allows users to add licensed music and on-screen captions
+&lt;br&gt;&lt;br&gt;
+Viewers can scroll through an endless feed of videos algorithmically tailored for the user
+
+]
+
+---
+
+## Why YouTube?
+
+.pull-left[
+&lt;center&gt;
+&lt;img src = 'imgs/YouTube-page.png' width = 480 height = 520/&gt;
+&lt;/center&gt;
+]
+
+
+.pull-right[
+
+YouTube Shorts presents user-generated vertical or square videos up to 60 seconds long
+&lt;br&gt;&lt;br&gt;
+It allows users to add licensed music and on-screen captions
+&lt;br&gt;&lt;br&gt;
+Viewers can scroll through an endless feed of videos algorithmically tailored for the user
+&lt;br&gt;&lt;br&gt;
+Although intended to be watched on smartphones, YouTube Shorts can be viewed on all other devices
+
+]
+
+---
+
+## No ads!
+
+&lt;img src='https://gifdb.com/images/high/excited-shaquille-o-neal-3isxv4tbjeeb3fej.webp'/&gt;
+
+---
+
 ## This is what it looks like
 
 
 &lt;center&gt;
 &lt;img src = 'imgs/trailer1.gif' width = 300 height = 520/&gt;
-&lt;img src = 'imgs/trailer2.gif' width = 300 height = 520/&gt;
+ &lt;img src = 'imgs/trailer2.gif' width = 300 height = 520/&gt;
 &lt;img src = 'imgs/trailer3.gif' width = 300 height = 520/&gt;
 &lt;/center&gt; 
 
